[gd_scene load_steps=7 format=3 uid="uid://7stiemq6pi15"]

[ext_resource type="Texture2D" uid="uid://cxakiw7e7eaom" path="res://icon.svg" id="1_58tcd"]
[ext_resource type="PackedScene" uid="uid://chcs4qer8dybe" path="res://scenes/player/player.tscn" id="2_iiew0"]
[ext_resource type="Script" uid="uid://ddm6bjtgp8rv3" path="res://scripts/player/inventory_check.gd" id="3_iiew0"]
[ext_resource type="PackedScene" uid="uid://2th8rtech0pg" path="res://scenes/collectibles/chest_key.tscn" id="4_e0ygy"]
[ext_resource type="PackedScene" uid="uid://bhohtlj321per" path="res://scenes/chests/chest.tscn" id="5_737fq"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_03kx2"]
size = Vector2(128, 128)

[node name="QuestTest" type="Node2D"]

[node name="Floor" type="Sprite2D" parent="."]
position = Vector2(240, 235)
scale = Vector2(5, 0.06)
texture = ExtResource("1_58tcd")

[node name="StaticBody2D" type="StaticBody2D" parent="Floor"]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor/StaticBody2D"]
shape = SubResource("RectangleShape2D_03kx2")

[node name="Player" parent="." instance=ExtResource("2_iiew0")]
position = Vector2(87, 165)

[node name="Inventory Buttons" type="Node" parent="."]
script = ExtResource("3_iiew0")

[node name="ShowInventory" type="Button" parent="Inventory Buttons"]
offset_left = 8.0
offset_top = 8.0
offset_right = 137.0
offset_bottom = 39.0
text = "Show Inventory"

[node name="NextIteminInventory" type="Button" parent="Inventory Buttons"]
offset_left = 129.0
offset_top = 43.0
offset_right = 214.0
offset_bottom = 76.0
text = "Next Item"

[node name="PreviousIteminInventory" type="Button" parent="Inventory Buttons"]
offset_left = 9.0
offset_top = 44.0
offset_right = 124.0
offset_bottom = 75.0
text = "Previous Item"

[node name="AddWeapon0" type="Button" parent="Inventory Buttons"]
offset_left = 225.0
offset_top = 8.0
offset_right = 263.0
offset_bottom = 39.0
text = "W-0"

[node name="AddWeapon1" type="Button" parent="Inventory Buttons"]
offset_left = 268.0
offset_top = 8.0
offset_right = 306.0
offset_bottom = 39.0
text = "W-1"

[node name="AddItem0" type="Button" parent="Inventory Buttons"]
offset_left = 310.0
offset_top = 7.0
offset_right = 348.0
offset_bottom = 38.0
text = "N-0"

[node name="AddItem1" type="Button" parent="Inventory Buttons"]
offset_left = 352.0
offset_top = 7.0
offset_right = 390.0
offset_bottom = 38.0
text = "N-1"

[node name="AddToSlot" type="Button" parent="Inventory Buttons"]
offset_left = 235.0
offset_top = 45.0
offset_right = 328.0
offset_bottom = 76.0
text = "Add to Slot"

[node name="ReturnItem" type="Button" parent="Inventory Buttons"]
offset_left = 336.0
offset_top = 44.0
offset_right = 429.0
offset_bottom = 75.0
text = "Return Item"

[node name="ChestKey" parent="." instance=ExtResource("4_e0ygy")]
position = Vector2(280, 208)

[node name="Chest" parent="." instance=ExtResource("5_737fq")]
position = Vector2(426, 205)
movement_speed = 0.0

[connection signal="pressed" from="Inventory Buttons/ShowInventory" to="Inventory Buttons" method="_on_show_inventory_pressed"]
[connection signal="pressed" from="Inventory Buttons/NextIteminInventory" to="Inventory Buttons" method="_on_next_item_in_inventory_pressed"]
[connection signal="pressed" from="Inventory Buttons/PreviousIteminInventory" to="Inventory Buttons" method="_on_previous_item_in_inventory_pressed"]
[connection signal="pressed" from="Inventory Buttons/AddWeapon0" to="Inventory Buttons" method="_on_add_weapon_0_pressed"]
[connection signal="pressed" from="Inventory Buttons/AddWeapon1" to="Inventory Buttons" method="_on_add_weapon_1_pressed"]
[connection signal="pressed" from="Inventory Buttons/AddItem0" to="Inventory Buttons" method="_on_add_item_0_pressed"]
[connection signal="pressed" from="Inventory Buttons/AddItem1" to="Inventory Buttons" method="_on_add_item_1_pressed"]
[connection signal="pressed" from="Inventory Buttons/AddToSlot" to="Inventory Buttons" method="_on_add_to_slot_pressed"]
[connection signal="pressed" from="Inventory Buttons/ReturnItem" to="Inventory Buttons" method="_on_return_item_pressed"]
